add_library( opgen-shear_heating

   P2ElementwiseShearHeatingP1ViscosityScaled.cpp
   P2ElementwiseShearHeatingP1ViscosityScaled.hpp
   P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap.cpp
   P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap.hpp
   P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap.cpp
   P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap.hpp
   P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap.cpp
   P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap.hpp
   P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap.cpp
   P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap.hpp
)
target_link_libraries( opgen-shear_heating PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-shear_heating PRIVATE

      avx/P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaled_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaled_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-shear_heating PRIVATE

      noarch/P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaled_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityScaled_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityScaled_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-shear_heating PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-shear_heating PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-shear_heating PUBLIC cxx_std_17)
endif ()
