add_library( opgen-supg_adiabatic_heating

   P2ElementwiseSupgAdiabaticHeatingAnnulusMap.cpp
   P2ElementwiseSupgAdiabaticHeatingAnnulusMap.hpp
   P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap.cpp
   P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap.hpp
   P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap.cpp
   P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap.hpp
   P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap.cpp
   P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap.hpp
)
target_link_libraries( opgen-supg_adiabatic_heating PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-supg_adiabatic_heating PRIVATE

      avx/P2ElementwiseSupgAdiabaticHeatingAnnulusMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingAnnulusMap_toMatrixScaled_P2ElementwiseSupgAdiabaticHeatingAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseSupgAdiabaticHeatingAnnulusMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-supg_adiabatic_heating PRIVATE

      noarch/P2ElementwiseSupgAdiabaticHeatingAnnulusMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingAnnulusMap_toMatrixScaled_P2ElementwiseSupgAdiabaticHeatingAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgAdiabaticHeatingCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgAdiabaticHeatingIcosahedralShellMap_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-supg_adiabatic_heating PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-supg_adiabatic_heating PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-supg_adiabatic_heating PUBLIC cxx_std_17)
endif ()
