add_library( opgen-supg_advection

   P2ElementwiseSupgAdvection.cpp
   P2ElementwiseSupgAdvection.hpp
   P2ElementwiseSupgAdvectionAnnulusMap.cpp
   P2ElementwiseSupgAdvectionAnnulusMap.hpp
   P2ElementwiseSupgAdvectionCoeffDelta.cpp
   P2ElementwiseSupgAdvectionCoeffDelta.hpp
   P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap.cpp
   P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap.hpp
   P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap.cpp
   P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap.hpp
   P2ElementwiseSupgAdvectionIcosahedralShellMap.cpp
   P2ElementwiseSupgAdvectionIcosahedralShellMap.hpp
)
target_link_libraries( opgen-supg_advection PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-supg_advection PRIVATE

      avx/P2ElementwiseSupgAdvectionAnnulusMap_applyScaled_P2ElementwiseSupgAdvectionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDelta_applyScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDelta_applyScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdvectionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdvection_applyScaled_P2ElementwiseSupgAdvection_macro_2D.cpp
      avx/P2ElementwiseSupgAdvection_applyScaled_P2ElementwiseSupgAdvection_macro_3D.cpp
      avx/P2ElementwiseSupgAdvection_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvection_macro_2D.cpp
      avx/P2ElementwiseSupgAdvection_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvection_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionAnnulusMap_toMatrixScaled_P2ElementwiseSupgAdvectionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDelta_toMatrixScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDelta_toMatrixScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgAdvectionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvection_toMatrixScaled_P2ElementwiseSupgAdvection_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvection_toMatrixScaled_P2ElementwiseSupgAdvection_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseSupgAdvectionAnnulusMap_applyScaled_P2ElementwiseSupgAdvectionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDelta_applyScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDelta_applyScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgAdvectionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdvectionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdvectionIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgAdvection_applyScaled_P2ElementwiseSupgAdvection_macro_2D.cpp
      avx/P2ElementwiseSupgAdvection_applyScaled_P2ElementwiseSupgAdvection_macro_3D.cpp
      avx/P2ElementwiseSupgAdvection_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvection_macro_2D.cpp
      avx/P2ElementwiseSupgAdvection_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvection_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-supg_advection PRIVATE

      noarch/P2ElementwiseSupgAdvectionAnnulusMap_applyScaled_P2ElementwiseSupgAdvectionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionAnnulusMap_toMatrixScaled_P2ElementwiseSupgAdvectionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgAdvectionCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgAdvectionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDelta_applyScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDelta_applyScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDelta_toMatrixScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvectionCoeffDelta_toMatrixScaled_P2ElementwiseSupgAdvectionCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionIcosahedralShellMap_applyScaled_P2ElementwiseSupgAdvectionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvectionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvectionIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgAdvectionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvection_applyScaled_P2ElementwiseSupgAdvection_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvection_applyScaled_P2ElementwiseSupgAdvection_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvection_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvection_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvection_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgAdvection_macro_3D.cpp
      noarch/P2ElementwiseSupgAdvection_toMatrixScaled_P2ElementwiseSupgAdvection_macro_2D.cpp
      noarch/P2ElementwiseSupgAdvection_toMatrixScaled_P2ElementwiseSupgAdvection_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-supg_advection PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-supg_advection PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-supg_advection PUBLIC cxx_std_17)
endif ()
