add_library( opgen-supg_diffusion

   P2ElementwiseSupgDiffusion.cpp
   P2ElementwiseSupgDiffusion.hpp
   P2ElementwiseSupgDiffusionAnnulusMap.cpp
   P2ElementwiseSupgDiffusionAnnulusMap.hpp
   P2ElementwiseSupgDiffusionCoeffDelta.cpp
   P2ElementwiseSupgDiffusionCoeffDelta.hpp
   P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap.cpp
   P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap.hpp
   P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap.cpp
   P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap.hpp
   P2ElementwiseSupgDiffusionIcosahedralShellMap.cpp
   P2ElementwiseSupgDiffusionIcosahedralShellMap.hpp
)
target_link_libraries( opgen-supg_diffusion PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-supg_diffusion PRIVATE

      avx/P2ElementwiseSupgDiffusionAnnulusMap_applyScaled_P2ElementwiseSupgDiffusionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDelta_applyScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDelta_applyScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionIcosahedralShellMap_applyScaled_P2ElementwiseSupgDiffusionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusion_applyScaled_P2ElementwiseSupgDiffusion_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusion_applyScaled_P2ElementwiseSupgDiffusion_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusion_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusion_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionAnnulusMap_toMatrixScaled_P2ElementwiseSupgDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDelta_toMatrixScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDelta_toMatrixScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgDiffusionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusion_toMatrixScaled_P2ElementwiseSupgDiffusion_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusion_toMatrixScaled_P2ElementwiseSupgDiffusion_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseSupgDiffusionAnnulusMap_applyScaled_P2ElementwiseSupgDiffusionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDelta_applyScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDelta_applyScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionIcosahedralShellMap_applyScaled_P2ElementwiseSupgDiffusionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusionIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusion_applyScaled_P2ElementwiseSupgDiffusion_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusion_applyScaled_P2ElementwiseSupgDiffusion_macro_3D.cpp
      avx/P2ElementwiseSupgDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusion_macro_2D.cpp
      avx/P2ElementwiseSupgDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusion_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-supg_diffusion PRIVATE

      noarch/P2ElementwiseSupgDiffusionAnnulusMap_applyScaled_P2ElementwiseSupgDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionAnnulusMap_toMatrixScaled_P2ElementwiseSupgDiffusionAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgDiffusionCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgDiffusionCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDelta_applyScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDelta_applyScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDelta_toMatrixScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusionCoeffDelta_toMatrixScaled_P2ElementwiseSupgDiffusionCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionIcosahedralShellMap_applyScaled_P2ElementwiseSupgDiffusionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusionIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgDiffusionIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusion_applyScaled_P2ElementwiseSupgDiffusion_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusion_applyScaled_P2ElementwiseSupgDiffusion_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusion_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusion_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgDiffusion_macro_3D.cpp
      noarch/P2ElementwiseSupgDiffusion_toMatrixScaled_P2ElementwiseSupgDiffusion_macro_2D.cpp
      noarch/P2ElementwiseSupgDiffusion_toMatrixScaled_P2ElementwiseSupgDiffusion_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-supg_diffusion PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-supg_diffusion PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-supg_diffusion PUBLIC cxx_std_17)
endif ()
